--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </label>
           <label>
             <input type="checkbox" id="layer-hydrants">
-            Hydranten
+            Hydrantenkarte
           </label>
         </div>
       </div>
