--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <!-- Linke Eingaben -->
       <div class="sidebar left">
-        <h3>Notizen:</h3>
+        <h3>Allgemeine Notizen:</h3>
         <textarea rows="10"></textarea>
         <h3>Fahrzeuge</h3>
         <div class="department">
