--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <!-- Linke Eingaben -->
       <div class="sidebar left">
-        <h3>Allgemeine Notizen:</h3>
+        <h3>Notizen:</h3>
         <textarea rows="10"></textarea>
         <h3>Fahrzeuge</h3>
         <div class="department">
@@ -104,7 +104,7 @@
         <canvas id="drawingCanvas"></canvas>
 
         <div class="toolbar">
-          <button id="clearCanvas">Karten Inhalt Löschen</button>
+          <button id="clearCanvas" style="padding:10px 20px; background:#c00; color:white; border:none; border-radius:8px; cursor:pointer;">Karten Inhalt Löschen</button>
         </div>
         <div class="layer-menu">
           <label>
