--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
         <div class="layer-menu">
           <label>
             <input type="checkbox" id="layer-background" checked>
-            Karte
+            Karte - Normal
           </label>
           <label>
             <input type="checkbox" id="layer-hydrants">
-            Hydranten
+            Karte - Hydranten
           </label>
         </div>
       </div>
