--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
           </div>
         </div>
         <button onclick="clearFields()" style="padding:10px 20px; background:#c00; color:white; border:none; border-radius:8px; cursor:pointer;">
-          Inhalte Textfelder Löschen
+          Textfelder Inhalt Löschen
+        </button>
+        <button id="clearCanvas" style="padding:10px 20px; background:#c00; color:white; border:none; border-radius:8px; cursor:pointer;">
+          Karten Inhalt Löschen
         </button>
       </div>
       <!-- Malfläche -->
@@ -104,7 +107,6 @@
         <canvas id="drawingCanvas"></canvas>
 
         <div class="toolbar">
-          <button id="clearCanvas" style="padding:10px 20px; background:#c00; color:white; border:none; border-radius:8px; cursor:pointer;">Karten Inhalt Löschen</button>
         </div>
         <div class="layer-menu">
           <label>
