--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
             <input type="checkbox" id="layer-hydrants">
             Karte - Hydranten
           </label>
+          <label>
+            <input type="checkbox" id="layer-bsr">
+            Karte - Bereitstellungsräume
+          </label>
         </div>
       </div>
       <!-- Rechte Eingaben -->
