--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <div class="toolbar">
             <button class="mode-btn" data-mode="move">Verschieben</button>
             <button class="mode-btn" data-mode="paint">Malen</button>
+            <button class="mode-btn" data-mode="eraser">Radiergummi</button>
           </div>
           <div class="layer-menu">
             <label><input type="checkbox" id="layer-pda"> PDA anzeigen</label>
