--- a/index.html
+++ b/index.html
@@ -45,52 +45,52 @@
             <label><input type="checkbox" id="layer-hydrants"> Hydranten anzeigen</label>
             <label><input type="checkbox" id="layer-brs"> Bereitstellungsraum anzeigen</label>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTBRAND1.svg" alt=""><span>Entstehungsbrand</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTBRAND2.svg" alt=""><span>Fortentwickelter Brand</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTBRAND3.svg" alt=""><span>Vollbrand</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTUNFALL.svg" alt=""><span>TH</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTGEFAHRGUT.svg" alt=""><span>Gefahrstoff</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTVERPF.png" alt=""><span>Verpflegungsstelle</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTBSR.png" alt=""><span>Bereitstellungsraum</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTPAT.png" alt=""><span>Patientenablage</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTBHP.png" alt=""><span>Behandlungsplatz</span>
           </div>
-          <div class="vehicle" draggable="true">
+          <div class="vehicle taktik" draggable="true">
             <img src="img/LSTBTP.png" alt=""><span>Betreuungsplatz</span>
           </div>
-          <div class="vehicle">
+          <div class="gebiet taktik" data-color="rgba(255,0,0,0.4)">
             <img src="img/LSTFLBRAND.png" alt=""><span>Flächenbrand</span>
           </div>
-          <div class="vehicle">
+          <div class="gebiet taktik" data-color="rgba(0,0,255,0.4)">
             <img src="img/LSTUEBRS.png" alt=""><span>Überschwemmtes Gebiet</span>
           </div>
-          <div class="vehicle">
+          <div class="gebiet taktik" data-color="rgba(255,105,180,0.4)">
             <img src="img/LSTAUSFALL.png" alt=""><span>Ausfall der Versorgung</span>
           </div>
-          <div class="vehicle">
+          <div class="gebiet taktik" data-color="rgba(255,165,0,0.4)">
             <img src="img/LSTSONSTIGES.png" alt=""><span>Sonstiges Ereignis</span>
           </div>
-          <div class="vehicle">
+          <div class="gebiet taktik" data-color="rgba(255,255,0,0.4)">
             <img src="img/LSTKONTA.png" alt=""><span>Kontaminiertes Gebiet</span>
           </div>
-          <div class="vehicle">
+          <div class="gebiet taktik" data-color="rgba(135,206,250,0.4)">
             <img src="img/LSTWASSER.png" alt=""><span>Hochwasser</span>
           </div>
         </div>
@@ -104,33 +104,33 @@
       <!-- Links: Abteilung 1 und 4 -->
       <div class="vehicles-left">
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-right: 2px solid #c00;">— Abteilung 1 —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle fuehrung" draggable="true">
           <img src="img/110.svg" alt="KdoW"><span>1/10 - KdoW</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle fuehrung" draggable="true">
           <img src="img/111.svg" alt="ELW1"><span>1/11 - ELW1</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/140.svg" alt="StLF"><span>1/40 - StLF</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/133.svg" alt="DLK"><span>1/33 - DLK</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/146.svg" alt="HLF20"><span>1/46 - HLF20</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/165.svg" alt="WLF"><span>1/65 - WLF</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/117.svg" alt="MZF"><span>1/17 - MZF</span>
         </div>
 
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-right: 2px solid #c00;">— Abteilung 4 —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/424.svg" alt="ELW1"><span>4/24 - TLF2000</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/494.svg" alt="StLF"><span>4/94 - GW-Mess</span>
         </div>
       </div>
@@ -143,41 +143,41 @@
       <!-- Unten: Abteilung 3 und 4, RW1, RW2, Fiktiv: POL, NEF, RD, RTH-->
       <div class="vehicles-bottom-center">
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-bottom: 2px solid #c00;">— RW 1 —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/NEF.svg" alt="ELW1"><span>1/82-1 - NEF</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/RTW.svg" alt="StLF"><span>1/83-1 - RTW</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/RTW.svg" alt="ELW1"><span>1/83-2 - RTW</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/NKTW.svg" alt="StLF"><span>1/85-1 - NKTW</span>
         </div>
 
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-bottom: 2px solid #c00;">— RW 2 —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/RTW2.svg" alt="ELW1"><span>2/83-1 - RTW</span>
         </div>
 
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-bottom: 2px solid #c00;">— Fiktiv —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle pol" draggable="true">
           <img src="img/LSTPOL.svg" alt="ELW1"><span>[LST] POL</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/LSTNEF.svg" alt="ELW1"><span>[LST] NEF</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/LSTRTW.svg" alt="ELW1"><span>[LST] RTW</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/LSTRTH.svg" alt="ELW1"><span>[LST] RTH</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle hiorg" draggable="true">
           <img src="img/LSTRTHLPZ.svg" alt="ELW1"><span>[LST] RTH - Landeplatz</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle thw" draggable="true">
           <img src="img/LSTTHW.svg" alt="ELW1"><span>[LST] THW</span>
         </div>
       </div>
@@ -198,30 +198,30 @@
       <!-- Rechts: Abteilung 2 und 3-->
       <div class="vehicles-right">
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-right: 2px solid #c00;">—  Abteilung 2  —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle fuehrung" draggable="true">
           <img src="img/214.svg" alt="ELW1"><span>2/14 - MZF-EL</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/242.svg" alt="StLF"><span>2/42 - LF10</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/233.svg" alt="DLK"><span>2/33 - DLK</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/244.svg" alt="HLF20"><span>2/44 - LF20/16</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/252.svg" alt="WLF"><span>2/52 - RW2</span>
         </div>
-        <div class="vehicle" draggable="true">
-          <img src="img/273.svg" alt="MZF"><span>1/73 - GW-L1</span>
+        <div class="vehicle feuerwehr" draggable="true">
+          <img src="img/273.svg" alt="MZF"><span>2/73 - GW-L1</span>
         </div>
 
         <h3 style="border-top: 2px solid #c00; border-left: 2px solid #c00; border-right: 2px solid #c00;">—  Abteilung 3  —</h3>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/343.svg" alt="ELW1"><span>3/43 - HLF10</span>
         </div>
-        <div class="vehicle" draggable="true">
+        <div class="vehicle feuerwehr" draggable="true">
           <img src="img/312.svg" alt="StLF"><span>3/12 - ELW2</span>
         </div>
       </div>
